Removed extra line breaks

--- a/r/css/main.scss
+++ b/r/css/main.scss
@@ -5,7 +5,7 @@
 
 In fact it's the greatest day of my life (so far)
 
-Copyright (c) 2014, Andy Bateman. All rights reserved.
+Copyright (c) {{ site.time | date: '%Y' }}, Andy Bateman. All rights reserved.
 http://www.andybateman.com
 
 */
